<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">guess#</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- BACK BUTTON -->
    <string name="button_back">Back</string>

    <!-- START ACTIVITY -->
    <string name="start_heading">guess#</string>
    <string name="button_start">New game</string>
    <string name="button_highscore">Highscore</string>
    <string name="button_rules">Rules</string>
    <string name="title_activity_rules">RulesActivity</string>

    <!-- RULES ACTIVITY -->
    <string name="rules_heading">Rules</string>
    <string name="rules_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</string>

    <!-- NEW ACTIVITY -->
    <string name="new_heading">New game</string>
    <string name="button_host">Host game</string>
    <string name="button_join">Join game</string>

    <!-- HOST ACTIVITY -->
    <string name="host_heading">Host game</string>
    <string name="game_name_instruction">Input game name</string>
    <string name="difficulty_setting_instruction">Set difficulty</string>
    <string name="input_game_name">Input game name</string>
    <string name="difficulty_setting_level">medium</string>
    <string name="button_create">Create game</string>

    <!-- WAIT HOST ACTIVITY -->
    <string name="host_wait_heading">Host game</string>
    <string name="waiting_for_players">Waiting for players.</string>
    <string name="button_start_game">Start game</string>

    <!-- WAIT GUEST ACTIVITY -->
    <string name="guest_wait_heading">Join game</string>
    <string name="waiting_for_host">Waiting for host.</string>

    <!-- INPUT TAG ACTIVITY -->
    <string name="input_heading">Input hashtag</string>
    <string name="input_hashtag">Input hashtag</string>
    <string name="input_a_word">Input word excluding # sign</string>
    <string name="button_submit">Submit</string>
    <string name="used_hashtag">This hashtag has already been used!</string>
    <string name="title_activity_input_tag">InputTagActivity</string>
    <string name="title_activity_select_tagger">SelectTaggerActivity</string>

    <!-- TIMER ACTIVITY -->
    <string name="timer_heading">Countdown Timer</string>
    <string name="timer_value">Timer Value</string>
    <string name="title_activity_timer">TimerActivity</string>
    <string name="title_activity_host">HostActivity</string>
    <string name="title_activity_guess_tag">GuessTagActivity</string>
    <string name="title_activity_result_round">ResultRoundActivity</string>
    <string name="title_activity_join_game">JoinGameActivity</string>
    <string name="title_activity_result_final">ResultFinalActivity</string>

    <!-- GUESS TAG ACTIVITY -->
    <string name="guess_the_hashtag">Guess the hashtag</string>
    <string name="input_guess">Input your guess</string>
    <string name="wrong_answer">Wrong answer, try again!</string>
    <string name="hashtag_sign">#</string>
    <string name="guess_tag">Guess#</string>
    <string name="image_one">Image 1</string>
    <string name="image_two">Image 2</string>
    <string name="image_three">Image 3</string>
    <string name="image_four">Image 4</string>
    <string name="image_five">Image 5</string>
    <string name="image_six">Image 6</string>
    
    <!-- HIGHSCORE ACTIVITY -->
    <string name="title_activity_highscore">Highscore List</string>
    <string name="title_section1">Easy</string>
    <string name="title_section2">Medium</string>
    <string name="title_section3">Hard</string>
    <string name="title_activity_wait_host">WaitHostActivity</string>
    <string name="title_activity_wait_guest">WaitGuestActivity</string>
    
    <!-- RESULT FINAL ACTIVITY -->
    <string name="final_result">Final result</string>
    <string name="button_end">End game</string>
    
    <!-- HIGHSCORE LIST ITEM -->
    <string name="game_name">game name</string>
    <string name="nr_of_guesses">55</string>
    <string name="total_time_spent">3:46</string>
    <string name="points">104</string>
    
    <!-- USER NAME POPUP -->
    <string name="choose_an_alias">Choose an alias</string>
    <string name="button_ok">OK</string>
    <string name="input_alias">alias</string>
    
    <string name="image_view_1">ImageView1</string>
    

</resources>
