<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#69e0c8"
    tools:context="com.example.guesstag.HostActivity" >
    <LinearLayout
        android:id="@+id/difficulty_container"
        android:orientation="vertical"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >
    
    </LinearLayout>


    <TextView
        android:id="@+id/host_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/difficulty_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/host_heading"
        android:textColor="#212121"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/input_game_name"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/host_heading"
        android:layout_alignRight="@+id/host_heading"
        android:layout_below="@+id/host_heading"
        android:layout_marginTop="12dp"
        android:background="@color/White"
        android:ems="10"
        android:hint="@string/input_game_name" >

        <requestFocus />
    </EditText>

    <SeekBar
        android:id="@+id/difficulty_setting"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_create"
        android:layout_alignRight="@+id/button_create"
        android:layout_below="@+id/input_game_name"
        android:layout_marginTop="75dp"
        android:max="2"
        android:progress="1"
        android:progressTint="@color/Gray" />

    <TextView
        android:id="@+id/difficulty_setting_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/difficulty_setting"
        android:layout_centerHorizontal="true"
        android:text="@string/difficulty_setting_level"
        android:textColor="@color/Yellow"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/difficulty_setting_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/difficulty_setting"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:text="@string/difficulty_setting_instruction"
        android:textColor="#212121"
        android:textSize="22sp" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_create"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="41dp"
        android:background="@drawable/btn_back"
        android:onClick="onClickBack" />

    <Button
        android:id="@+id/button_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_back"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:background="@drawable/btn_create"
        android:onClick="onClickCreate" />

</RelativeLayout>
