<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#69e0c8"
    tools:context="com.example.guesstag.InputTagActivity" >
    

   		<TextView
        	android:id="@+id/input_a_word"
        	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_marginLeft="2dp"
	    	android:layout_marginBottom="3dp"
	    	android:textColor="@color/White">
    	</TextView>

    <TextView
        android:id="@+id/input_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/input_a_word"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Input a hashtag"
        android:textColor="#212121"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/input_hashtag"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/used_hashtag"
        android:layout_alignRight="@+id/used_hashtag"
        android:layout_below="@+id/input_heading"
        android:layout_marginTop="27dp"
        android:background="@color/White"
        android:ems="10"
        android:hint="@string/input_hashtag" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/hashtag_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/used_hashtag"
        android:layout_toLeftOf="@+id/buttonSubmit"
        android:text="@string/hashtag_sign"
        android:textColor="#212121"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/used_hashtag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_hashtag"
        android:layout_centerHorizontal="true"
        android:text="@string/used_hashtag"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/Red" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/used_hashtag"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:background="@drawable/btn_submit"
        android:onClick="onClickSubmit" />

</RelativeLayout>